# vocalizer

./: .gitignore
.github/: copilot-instructions.md
.github/workflows/: release.yml
backend/: .final_job.txt  .job_dev.txt  audiostem-backend.py  audiostem-backend.spec  pyproject.toml  requirements-gpu.txt  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/models/: db.py  schemas.py
backend/app/routers/: export.py  files.py  models.py  preview.py  separate.py  system.py
backend/app/services/: audio_info.py  exporter.py  ffmpeg_validator.py  model_downloader.py  model_manager.py  onnx_optimizer.py  separator.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: BatchQueueView.tsx  ImportModelModal.tsx  Layout.tsx  LibraryPanel.tsx  ModelManagerModal.tsx  PlayerPanel.tsx  SettingsModal.tsx  StemWaveformThumb.tsx  StemsPanel.tsx  Toast.tsx  Waveform.tsx
frontend/src/lib/: tauri.ts
frontend/src/store/: useAppStore.ts
frontend/src/types/: index.ts
scripts/: build.ps1  build.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
test_hide/: Cargo.toml
test_hide/src/: main.rs
